# Practice-in-OOP-with-some-games

./: A3_Task2_3_4_S3_20220106_20220198_20221217.cpp  BoardGame_Classes.hpp  CMakeLists.txt  ConnectFourBoard.cpp  ConnectFourPlayer.cpp  ConnectFourRandomPlayer.cpp  Four_in_a_row.h  Pyramic_Tic_Tac_Toe.cpp  Pyramic_Tic_Tac_Toe.h  Pyramic_X_O_App.cpp  Tic_Tac_Toe.h  Tic_Tac_Toe_App.cpp  Tic_Tac_Toe_Board.cpp  X_O_App.cpp  main.cpp
